--- a/src/styles/calendarw.css
+++ b/src/styles/calendarw.css
@@ -7,7 +7,7 @@ body {
     /* margin: 0 auto; */
 }
 .calendar-container {
-    position: absolute;
+    position: relative;
     margin-top: 2vh;
 
 }
